[gd_scene load_steps=30 format=3 uid="uid://b1xq2pkdlwbhe"]

[ext_resource type="Script" path="res://scripts/enemy_dalnik.gd" id="1_qx28b"]
[ext_resource type="Texture2D" uid="uid://cd46fjj244pks" path="res://sprites/red_gopnik1.png" id="3_ovt44"]
[ext_resource type="AudioStream" uid="uid://duf5hg4pthsph" path="res://audio/arni_jab.wav" id="3_tstdn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jrh2n"]
size = Vector2(70, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qwk6"]
atlas = ExtResource("3_ovt44")
region = Rect2(1056, 0, 96, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1c5l"]
atlas = ExtResource("3_ovt44")
region = Rect2(1152, 0, 96, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfdc1"]
atlas = ExtResource("3_ovt44")
region = Rect2(1248, 0, 96, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocgxi"]
atlas = ExtResource("3_ovt44")
region = Rect2(1344, 0, 96, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqguk"]
atlas = ExtResource("3_ovt44")
region = Rect2(384, 0, 96, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_auim5"]
atlas = ExtResource("3_ovt44")
region = Rect2(480, 0, 96, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_00l58"]
atlas = ExtResource("3_ovt44")
region = Rect2(576, 0, 96, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_7weve"]
atlas = ExtResource("3_ovt44")
region = Rect2(672, 0, 96, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk656"]
atlas = ExtResource("3_ovt44")
region = Rect2(768, 0, 96, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_kio4y"]
atlas = ExtResource("3_ovt44")
region = Rect2(864, 0, 96, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y2xh"]
atlas = ExtResource("3_ovt44")
region = Rect2(960, 0, 96, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp5wb"]
atlas = ExtResource("3_ovt44")
region = Rect2(384, 0, 96, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw0ri"]
atlas = ExtResource("3_ovt44")
region = Rect2(480, 0, 96, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_m64es"]
atlas = ExtResource("3_ovt44")
region = Rect2(576, 0, 96, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bo1q"]
atlas = ExtResource("3_ovt44")
region = Rect2(672, 0, 96, 65)

[sub_resource type="SpriteFrames" id="SpriteFrames_e3786"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qwk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1c5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfdc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocgxi")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqguk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auim5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00l58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7weve")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk656")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kio4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y2xh")
}],
"loop": true,
"name": &"jab",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp5wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw0ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m64es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bo1q")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_w8pcs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uchc8"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, false, true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_33sxo"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3)
}

[sub_resource type="Animation" id="Animation_ql7dk"]
resource_name = "idle"
length = 0.45
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45)
}

[sub_resource type="Animation" id="Animation_kdkx3"]
resource_name = "jab_attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jab"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4)
}

[sub_resource type="Animation" id="Animation_eahwk"]
resource_name = "walk"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 7, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0, 9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7, 0.8, 0.9)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7x7w"]
_data = {
"RESET": SubResource("Animation_w8pcs"),
"death": SubResource("Animation_uchc8"),
"hurt": SubResource("Animation_33sxo"),
"idle": SubResource("Animation_ql7dk"),
"jab_attack": SubResource("Animation_kdkx3"),
"walk": SubResource("Animation_eahwk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1i1tk"]
size = Vector2(93.7049, 5.77084)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f770b"]
size = Vector2(75, 27)

[node name="enemy_dalnik" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_qx28b")
distanceBetweenPlayer = 350

[node name="HurtBox" type="Area2D" parent="." groups=["hurtBox"]]
position = Vector2(-7, -67)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(8, 54.5)
shape = SubResource("RectangleShape2D_jrh2n")
debug_color = Color(0, 0.639216, 0.360784, 0.419608)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(6, -91)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_e3786")
animation = &"hurt"

[node name="AnimationEnemy" type="AnimationPlayer" parent="AnimatedSprite2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_s7x7w")
}

[node name="PlayerDetecter" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(-2.66667, 23.1667)

[node name="PlayerDetecterCollider" type="CollisionShape2D" parent="AnimatedSprite2D/PlayerDetecter"]
position = Vector2(3.51667e-06, 4.44788)
scale = Vector2(3.70667, 1)
shape = SubResource("RectangleShape2D_1i1tk")
debug_color = Color(0.878431, 0.270588, 0.407843, 0.419608)

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(2.5, -12.5)
shape = SubResource("RectangleShape2D_f770b")

[node name="hitSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tstdn")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="AnimatedSprite2D/PlayerDetecter" to="." method="_on_player_detecter_area_entered"]
[connection signal="area_exited" from="AnimatedSprite2D/PlayerDetecter" to="." method="_on_player_detecter_area_exited"]
